--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,11 @@
 footer {
     position: absolute;
     bottom: 0;
-    background-color: #00FF00;
+    background-color: white;
     height: 60px;
     width: 100%;
     display: table;
+    border-top: 1px solid #CCCCCC;
 }
 
 .HBTNfooter {
