--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -19,13 +19,14 @@
     border-radius: 4px;
     margin-bottom: 70px;
     padding-bottom: 60px;
+    padding-top: 10px;
 }
 
 .all_places h2 {
     font-size: 30px;
     text-align: center;
     margin-bottom: 40px;
-    margin-top: 0px;
+    margin-top: 5px;
 }
 
 .information {
@@ -67,4 +68,31 @@
 .content {
     text-align: left;
     margin-top: 25px;
+}
+
+.square_header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.circle {
+    height: 60px;
+    min-width: 60px;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
+    display: inline-block;
+    padding-top: 0px;
+    align-self: center;
+}
+
+.circle p {
+    color: #FF5A5F;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.empty_div {
+    height: 60px;
+    width: 60px;
 }
